--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,7 +65,6 @@ header a {
   font-weight: bold;
   text-decoration: none;
   color: #262626;
-  background-color: transparent;
 }
 
 header a:visited {
@@ -85,7 +84,7 @@ button {
   border-radius: 4px;
   font-weight: bold;
   color: #262626;
-  background-color: transparent;
+  /* background-color: transparent */;
 }
 
 button:hover {
@@ -94,6 +93,11 @@ button:hover {
 
 button:focus {
   outline: 0;
+}
+
+button:disabled {
+  cursor: auto;
+  background-color: #dbdbdb;
 }
 
 input {
@@ -107,6 +111,14 @@ input {
 
 input:focus {
   color: #717171;
+}
+
+input[type="submit"]:hover {
+  cursor: pointer;
+}
+
+input[type="text"]:disabled {
+  background-color: #dbdbdb;
 }
 
 ::placeholder {
@@ -159,7 +171,7 @@ input:focus {
 }
 
 .invisible {
-  display: none;
+  display: none !important;
 }
 
 #header-buttons-div {
@@ -305,15 +317,11 @@ input:focus {
   border-radius: 4px;
   font-weight: bold;
   color: #262626;
-  background-color: transparent;
+  /* background-color: transparent */;
 }
 
 .custom-file-upload:hover {
   cursor: pointer;
-}
-
-#capture-button:disabled {
-  cursor: auto;
 }
 
 #photo-section {
@@ -574,7 +582,7 @@ img {
   font-weight: bold;
   text-decoration: none;
   color: #262626;
-  background-color: transparent;
+  /* background-color: transparent */;
 }
 
 @media only screen and (max-width: 768px) {
