--- a/views/account.html
+++ b/views/account.html
@@ -18,7 +18,7 @@
 			<label for='file-upload' class='custom-file-upload'>Upload a file</label>
 			<input id='file-upload' id='upload' accept='.jpg, .jpeg, .png' type='file'/>
 			<button id='capture-button' disabled>Take a picture</button>
-			<button id='clear-button'>Clear</button>
+			<button id='clear-button'>Remove stickers</button>
 		</div>
 		<div id='content'>
 			<main id='account-main'>
