--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -239,6 +239,10 @@ input[type="text"]:disabled {
   width: 100%;
 }
 
+.like-comment-and-comments-container {
+  padding: 5px;
+}
+
 .like-comment {
   display: flex;
   flex-direction: row;
@@ -265,6 +269,10 @@ input[type="text"]:disabled {
   line-height: 22px;
 }
 
+.comment-div {
+  word-break: break-all;
+}
+
 .delete-comment-button {
   margin-left: 10px;
   padding: 0;
@@ -276,6 +284,16 @@ input[type="text"]:disabled {
   padding-right: 5px;
   font-weight: 600;
   color: #262626;
+}
+
+.add-comment-input {
+  width: 100%;
+  margin-top: 1%;
+  box-sizing: border-box;
+  padding: 10px;
+  border: 1px solid #dbdbdb;
+  border-radius: 4px;
+  font-size: 14px;
 }
 
 .cool-input {
