--- a/views/account.html
+++ b/views/account.html
@@ -1,56 +1,60 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>My account</title>
-		<link rel='stylesheet' href='css/styles.css'>
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-	</head>
-	<body>
-		<header>
-			<h1 id='hello'></h1>
-			<div id='account-links'>
-				<a id='home-button' href='/'>Home</a>
-				<a id='signout-button' href='/signout'>Sign out</a>
+
+<head>
+	<title>My account</title>
+	<link rel='stylesheet' href='css/styles.css'>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+	 crossorigin="anonymous">
+	<meta name="viewport" content="width=device-width">
+</head>
+
+<body>
+	<header>
+		<h1 id='hello'></h1>
+		<div id='account-links'>
+			<a id='home-button' href='/'>Home</a>
+			<a id='signout-button' href='/signout'>Sign out</a>
+		</div>
+	</header>
+	<div id='photo-buttons'>
+		<label for='file-upload' class='custom-file-upload'>Upload a file</label>
+		<input id='file-upload' id='upload' accept='.jpg, .jpeg, .png' type='file' />
+		<button id='capture-button' disabled>Take a picture</button>
+		<button id='clear-button' disabled>Remove stickers</button>
+	</div>
+	<div id='content'>
+		<main id='account-main'>
+			<div id='photo-section'>
+				<div id='container'></div>
 			</div>
-		</header>
-		<div id='photo-buttons'>
-			<label for='file-upload' class='custom-file-upload'>Upload a file</label>
-			<input id='file-upload' id='upload' accept='.jpg, .jpeg, .png' type='file'/>
-			<button id='capture-button' disabled>Take a picture</button>
-			<button id='clear-button' disabled>Remove stickers</button>
-		</div>
-		<div id='content'>
-			<main id='account-main'>
-				<div id='photo-section'>
-					<div id='container'></div>
-				</div>
-				<div id='stickers-container'>
-					<div id='stickers'></div>
-				</div>
-			</main>
-			<section id='change-section'>
-				<div id='account-message-container'></div>
-				<div id='change-container'>
-					<form id='change-email-form'>
-						<input id='email' placeholder='Email' type='text' value=''>
-						<input type='submit' value='Change'>
-					</form>
-					<form id='change-login-form'>
-						<input id='login' placeholder='Login' type='text' value=''>
-						<input type='submit' value='Change'>
-					</form>
-					<form id='change-password-form'>
-						<input id='password' placeholder='Password' type='password' value=''>
-						<input type='submit' value='Change'>
-					</form>
-					<button id='notification-status'></button>
-				</div>
-			</section>
-			<div id='user-photos'></div>
-		</div>
-	</body>
-	<script src='js/account.js' type='module'></script>
-	<script src='/js/utils.js' type='module'></script>
-	<script src='/js/stretcher.js' type='module'></script>
+			<div id='stickers-container'>
+				<div id='stickers'></div>
+			</div>
+		</main>
+		<section id='change-section'>
+			<div id='account-message-container'></div>
+			<div id='change-container'>
+				<form id='change-email-form'>
+					<input id='email' placeholder='Email' type='text' value=''>
+					<input type='submit' value='Change'>
+				</form>
+				<form id='change-login-form'>
+					<input id='login' placeholder='Login' type='text' value=''>
+					<input type='submit' value='Change'>
+				</form>
+				<form id='change-password-form'>
+					<input id='password' placeholder='Password' type='password' value=''>
+					<input type='submit' value='Change'>
+				</form>
+				<button id='notification-status'></button>
+			</div>
+		</section>
+		<div id='user-photos'></div>
+	</div>
+</body>
+<script src='js/account.js' type='module'></script>
+<script src='/js/utils.js' type='module'></script>
+<script src='/js/stretcher.js' type='module'></script>
+
 </html>
