--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -86,6 +86,7 @@ button {
   border-radius: 4px;
   font-weight: bold;
   color: #262626;
+  background-color: transparent;
 }
 
 button:hover {
@@ -294,6 +295,10 @@ input[type="submit"]:hover {
   padding: 10px;
   border: 1px solid #dbdbdb;
   border-radius: 4px;
+}
+
+.add-comment-input:disabled {
+    background-color: #dbdbdb;
 }
 
 .cool-input {
