--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -57,7 +57,7 @@ header {
   resize: both;
 }
 
-header a {
+/* header a {
   padding-left: 25px;
   padding-right: 25px;
   padding-top: 5px;
@@ -67,17 +67,34 @@ header a {
   font-weight: bold;
   text-decoration: none;
   color: #262626;
+} */
+
+header a {
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #9ca5b4;
+  transition: all 0.2s;
 }
 
 header a:visited {
   text-decoration: none;
 }
 
+/* header a:hover {
+  cursor: pointer;
+} */
+
 header a:hover {
   cursor: pointer;
+  color: #3f4041;
+  border-bottom: 4px solid #2c23f0;
 }
 
-button {
+/* button {
   padding-left: 25px;
   padding-right: 25px;
   padding-top: 5px;
@@ -87,10 +104,26 @@ button {
   font-weight: bold;
   color: #262626;
   background-color: transparent;
+} */
+
+button {
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border: none;
+  border-radius: 20px;
+  font-weight: bold;
+  color: white;
+  background-image: linear-gradient(to right, #7b2af2 , #1509f4);
+  box-shadow: 0 3px 15px #808080;
+  transition: all 10s;
 }
 
 button:hover {
   cursor: pointer;
+  position: relative;
+  top: 1px;
 }
 
 button:focus {
@@ -111,12 +144,36 @@ input {
   border-radius: 4px;
 }
 
-input:focus {
+/* input:focus {
   color: #717171;
+} */
+
+input[type="submit"] {
+      /* padding-left: 25px; */
+    /* padding-right: 25px; */
+    /* padding-top: 5px; */
+    /* padding-bottom: 5px; */
+    border: 2px solid #7b2af2;
+    border-radius: 20px;
+    font-weight: bold;
+    color: #1509f4;
+    /* background-image: linear-gradient(to right, #7b2af2 , #1509f4); */
+    /* box-shadow: 0 5px 30px #808080; */
+    /* transition: all 10s; */
 }
 
 input[type="submit"]:hover {
   cursor: pointer;
+}
+
+input[type="text"]:focus {
+  outline: 1px solid #7b2af2;
+  border: 1px solid #7b2af2;
+}
+
+input[type="password"]:focus {
+  outline: 1px solid #7b2af2;
+  border: 1px solid #7b2af2;
 }
 
 ::placeholder {
@@ -324,11 +381,13 @@ input[type="submit"]:hover {
   position: relative;
   top: 77px;
   width: 100%;
-  height: 50px;
+  /* height: 50px; */
+  /* scarry moment, test */
+  height: 70px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #dbdbdb;
+  /* border: 1px solid #dbdbdb; */
 }
 
 #content {
@@ -337,19 +396,41 @@ input[type="submit"]:hover {
   width: 100%;
 }
 
-.custom-file-upload {
+#back-to-camera-button {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+#custom-file-upload {
+  margin-left: 10px;
+  margin-right: 10px;
   padding-left: 25px;
   padding-right: 25px;
   padding-top: 5px;
   padding-bottom: 5px;
-  border: 1px solid #dbdbdb;
-  border-radius: 4px;
+  border: none;
+  border-radius: 20px;
   font-weight: bold;
-  color: #262626;
+  color: white;
+  background-image: linear-gradient(to right, #7b2af2 , #1509f4);
+  box-shadow: 0 3px 15px #808080;
+  transition: all 10s;
 }
 
-.custom-file-upload:hover {
+#custom-file-upload:hover {
   cursor: pointer;
+  position: relative;
+  top: 1px;
+}
+
+#capture-button {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+#clear-button {
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 #photo-section {
@@ -397,7 +478,7 @@ input[type="submit"]:hover {
   justify-content: center;
   padding: 10px;
   align-items: center;
-  border: 1px solid #dbdbdb;
+  /* border: 1px solid #dbdbdb; */
 }
 
 #change-section input {
@@ -409,7 +490,6 @@ input[type="submit"]:hover {
   flex-direction: column;
   align-items: center;
   padding: 10px;
-  background-color: #ffffff;
 }
 
 #stickers-container button {
@@ -469,9 +549,9 @@ input[type="submit"]:hover {
 .user-photo-container {
   max-width: 614px;
   margin: 1%;
-  border: 1px solid #e6e6e6;
+  /* border: 1px solid #e6e6e6;
   border-radius: 4px;
-  background-color: #ffffff;
+  background-color: #ffffff; */
 }
 
 .user-photo {
@@ -621,7 +701,7 @@ img {
   header a,
   input[type="submit"],
   input,
-  .custom-file-upload {
+  #custom-file-upload {
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 20px;
@@ -648,7 +728,9 @@ img {
 
   #photo-buttons {
     top: 137px;
-    height: 80px;
+    /* height: 80px; */
+    /* scarry moment, test */
+    height: 100px;
   }
   
   #content {
