--- a/views/account.html
+++ b/views/account.html
@@ -37,15 +37,15 @@
 			<div id='change-container'>
 				<form id='change-email-form'>
 					<input id='email' placeholder='Email' type='text' value=''>
-					<input type='submit' value='Change'>
+					<input type='submit' value='Change' id='change-email-button'>
 				</form>
 				<form id='change-login-form'>
 					<input id='login' placeholder='Login' type='text' value=''>
-					<input type='submit' value='Change'>
+					<input type='submit' value='Change' id='change-login-button'>
 				</form>
 				<form id='change-password-form'>
 					<input id='password' placeholder='Password' type='password' value=''>
-					<input type='submit' value='Change'>
+					<input type='submit' value='Change' id='change-password-button'>
 				</form>
 				<button id='notification-status'></button>
 			</div>
