--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,35 +1,25 @@
 @font-face {
-	font-family: "Harabara Bold";
-	src: url("../fonts/chalala/chalala.otf") format("opentype");
-}
-
-@font-face {
-	font-family: "Youthness";
-	src: url("../fonts/effort/Effort TTF.ttf") format("opentype");
-}
-
-@font-face {
-	font-family: "Well Bred";
-	src: url("../fonts/well-bred/Well Bred Font by Situjuh (7NTypes).otf") format("opentype");
-}
-
-@font-face {
-  font-family: "Shefilla";
-  src: url("../fonts/shefilla/Shefilla TTF.ttf") format("opentype");
+  font-family: 'Shefilla';
+  src: url('../fonts/shefilla/Shefilla TTF.ttf') format('opentype');
 }
 
 * {
-  font-family: "open sans";
+  font-family: 'open sans';
   font-size: 14px;
 }
 
-label, header a, input, .cool-input, button {
+label,
+header a,
+input,
+.cool-input,
+button {
   font-size: 14px;
 }
 
-#website-title, #hello {
+#website-title,
+#hello {
   margin: 5px;
-  font-family: "Shefilla";
+  font-family: 'Shefilla';
   font-weight: normal;
   font-size: 2em;
 }
@@ -57,54 +47,32 @@ header {
   resize: both;
 }
 
-/* header a {
-  padding-left: 25px;
-  padding-right: 25px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  border: 1px solid #dbdbdb;
-  border-radius: 4px;
-  font-weight: bold;
-  text-decoration: none;
-  color: #262626;
-} */
-
 header a {
+  margin-left: 5px;
+  margin-right: 5px;
   padding-left: 25px;
   padding-right: 25px;
   padding-top: 5px;
   padding-bottom: 5px;
+  border: none;
+  border-radius: 20px;
   font-weight: bold;
   text-decoration: none;
-  color: #9ca5b4;
-  transition: all 0.2s;
+  color: white;
+  background-image: linear-gradient(to right, #792df3a8, #0d00ffb3);
+  box-shadow: 0 3px 15px #808080;
+  transition: top 10s;
+}
+
+header a:hover {
+  cursor: pointer;
+  position: relative;
+  top: 1px;
 }
 
 header a:visited {
   text-decoration: none;
 }
-
-/* header a:hover {
-  cursor: pointer;
-} */
-
-header a:hover {
-  cursor: pointer;
-  color: #3f4041;
-  border-bottom: 4px solid #2c23f0;
-}
-
-/* button {
-  padding-left: 25px;
-  padding-right: 25px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  border: 1px solid #dbdbdb;
-  border-radius: 4px;
-  font-weight: bold;
-  color: #262626;
-  background-color: transparent;
-} */
 
 button {
   padding-left: 25px;
@@ -115,9 +83,9 @@ button {
   border-radius: 20px;
   font-weight: bold;
   color: white;
-  background-image: linear-gradient(to right, #7b2af2 , #1509f4);
+  background-image: linear-gradient(to right, #792df3a8, #0d00ffb3);
   box-shadow: 0 3px 15px #808080;
-  transition: all 10s;
+  transition: top 10s;
 }
 
 button:hover {
@@ -144,52 +112,51 @@ input {
   border-radius: 4px;
 }
 
-/* input:focus {
-  color: #717171;
-} */
-
-input[type="submit"] {
-      /* padding-left: 25px; */
-    /* padding-right: 25px; */
-    /* padding-top: 5px; */
-    /* padding-bottom: 5px; */
-    border: 2px solid #7b2af2;
-    border-radius: 20px;
-    font-weight: bold;
-    color: #1509f4;
-    /* background-image: linear-gradient(to right, #7b2af2 , #1509f4); */
-    /* box-shadow: 0 5px 30px #808080; */
-    /* transition: all 10s; */
+input[type='submit'] {
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border: none;
+  border-radius: 20px;
+  font-weight: bold;
+  color: white;
+  background-image: linear-gradient(to right, #792df3a8, #0d00ffb3);
+  box-shadow: 0 3px 15px #808080;
+  transition: top 10s;
 }
 
-input[type="submit"]:hover {
+input[type='submit']:hover {
   cursor: pointer;
+  position: relative;
+  top: 1px;
 }
 
-input[type="text"]:focus {
-  outline: 1px solid #7b2af2;
-  border: 1px solid #7b2af2;
+input[type='submit']:focus {
+  outline: none;
 }
 
-input[type="password"]:focus {
-  outline: 1px solid #7b2af2;
-  border: 1px solid #7b2af2;
+.light-submit {
+  border: 1px solid #792df3a8;
+  border-radius: 20px;
+  font-weight: bold;
+  color: #0d00ffb3;
+}
+
+input[type='text']:focus {
+  outline: none;
+  border: 1px solid #792df3a8;
+}
+
+input[type='password']:focus {
+  outline: none;
+  border: 1px solid #792df3a8;
 }
 
 ::placeholder {
   /* Firefox */
   color: #717171;
   opacity: 1;
-}
-
-:-ms-input-placeholder {
-  /* Internet Explorer 10-11 */
-  color: #717171;
-}
-
-::-ms-input-placeholder {
-  /* Microsoft Edge */
-  color: #717171;
 }
 
 #overlay {
@@ -242,10 +209,7 @@ input[type="password"]:focus {
 }
 
 #home-message-container {
-  padding: 0.5%;
-  background-color: #ffffff;
-  border: 1px solid #e6e6e6;
-  border-radius: 4px;
+  padding: 10px;
 }
 
 #account-message-container {
@@ -265,9 +229,40 @@ input[type="password"]:focus {
   border-radius: 4px;
 }
 
+#form-container span {
+  margin: 1px;
+}
+
 #form-container input {
-  border: 1px solid #e6e6e6;
-  border-radius: 4px;
+  margin: 1px;
+}
+
+#form-container input[type='submot'] {
+  border: 1px solid #792df3a8;
+  border-radius: 20px;
+  font-weight: bold;
+  color: #0d00ffb3;
+}
+
+#sign-in-form-button,
+#sign-up-form-button,
+#get-reset-password-link-form-button,
+#change-email-button,
+#change-login-button,
+#change-password-button {
+  color: #1807f3;
+  border: 1px solid #782bf1;
+  background-image: none;
+  box-shadow: none;
+}
+
+#sign-in-form-button:hover,
+#sign-up-form-button:hover,
+#get-reset-password-link-form-button:hover,
+#change-email-button:hover,
+#change-login-button:hover,
+#change-password-button:hover {
+  top: 0;
 }
 
 #gallery {
@@ -279,7 +274,6 @@ input[type="password"]:focus {
 .photo-container {
   max-width: 614px;
   margin: 1%;
-  border: 1px solid #e6e6e6;
   border-radius: 4px;
   background-color: #ffffff;
 }
@@ -304,7 +298,10 @@ input[type="password"]:focus {
   margin: 5px;
 }
 
-.fa-heart, .like, .fa-comment, .comment {
+.fa-heart,
+.like,
+.fa-comment,
+.comment {
   font-size: 20px;
 }
 
@@ -334,8 +331,11 @@ input[type="password"]:focus {
 
 .delete-comment-button {
   margin-left: 10px;
-  padding: 0;
-  border: 0;
+  padding-left: 7px;
+  padding-right: 7px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 100%;
 }
 
 .login-div {
@@ -355,7 +355,7 @@ input[type="password"]:focus {
 }
 
 .add-comment-input:disabled {
-    background-color: #dbdbdb;
+  background-color: #dbdbdb;
 }
 
 .cool-input {
@@ -367,6 +367,11 @@ input[type="password"]:focus {
   background-color: #ffffff;
   border: 1px solid #dbdbdb;
   border-radius: 4px;
+}
+
+.cool-input:focus {
+  outline: none;
+  border: 1px solid #792df3a8;
 }
 
 .add-comment-button {
@@ -381,13 +386,10 @@ input[type="password"]:focus {
   position: relative;
   top: 77px;
   width: 100%;
-  /* height: 50px; */
-  /* scarry moment, test */
   height: 70px;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid #dbdbdb; */
 }
 
 #content {
@@ -412,9 +414,9 @@ input[type="password"]:focus {
   border-radius: 20px;
   font-weight: bold;
   color: white;
-  background-image: linear-gradient(to right, #7b2af2 , #1509f4);
+  background-image: linear-gradient(to right, #792df3a8, #0d00ffb3);
   box-shadow: 0 3px 15px #808080;
-  transition: all 10s;
+  transition: top 10s;
 }
 
 #custom-file-upload:hover {
@@ -478,7 +480,6 @@ input[type="password"]:focus {
   justify-content: center;
   padding: 10px;
   align-items: center;
-  /* border: 1px solid #dbdbdb; */
 }
 
 #change-section input {
@@ -536,7 +537,7 @@ input[type="password"]:focus {
 }
 
 .selected-sticked-sticker {
-  outline: 1px solid #dbdbdb;
+  outline: 2px solid #ffffff;
 }
 
 #user-photos {
@@ -549,9 +550,6 @@ input[type="password"]:focus {
 .user-photo-container {
   max-width: 614px;
   margin: 1%;
-  /* border: 1px solid #e6e6e6;
-  border-radius: 4px;
-  background-color: #ffffff; */
 }
 
 .user-photo {
@@ -566,7 +564,7 @@ input[type="password"]:focus {
   width: 50%;
 }
 
-input[type="file"] {
+input[type='file'] {
   display: none;
 }
 
@@ -633,7 +631,7 @@ img {
 
 .scroll::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background-color: #262626;
+  background-image: linear-gradient(to right, #792df3a8, #0d00ffb3);
   left: 50%;
 }
 
@@ -688,18 +686,23 @@ img {
     font-size: 24px;
   }
 
-  #website-title, #hello {
+  #website-title,
+  #hello {
     margin: 5px;
     font-size: 2em;
   }
 
-  label, header a, input, .cool-input, button {
+  label,
+  header a,
+  input,
+  .cool-input,
+  button {
     font-size: 24px;
   }
 
   button,
   header a,
-  input[type="submit"],
+  input[type='submit'],
   input,
   #custom-file-upload {
     padding-left: 10px;
@@ -707,6 +710,13 @@ img {
     padding-top: 20px;
     padding-bottom: 20px;
     background-color: transparent;
+  }
+
+  button,
+  header a,
+  input[type='submit'],
+  #custom-file-upload {
+    border-radius: 40px;
   }
 
   button:disabled {
@@ -728,11 +738,9 @@ img {
 
   #photo-buttons {
     top: 137px;
-    /* height: 80px; */
-    /* scarry moment, test */
-    height: 100px;
+    height: 120px;
   }
-  
+
   #content {
     top: 137px;
   }
@@ -757,7 +765,10 @@ img {
     line-height: 48px;
   }
 
-  .fa-heart, .like, .fa-comment, .comment {
+  .fa-heart,
+  .like,
+  .fa-comment,
+  .comment {
     font-size: 34px;
   }
 }
