--- a/views/404.html
+++ b/views/404.html
@@ -5,11 +5,13 @@
 		<link rel='stylesheet' href='css/styles.css'>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
-	<body>
+	<body id='page-not-found-body'>
 		<div id='page-not-found-content'>
-			<h1>Oops!</h1>
-			<h2>It looks like the page you are looking for cannot be found.</h2>
-			<p>Error code: 404</p>
+			<div>
+				<h1>Oops!</h1>
+				<p>It looks like the page you are looking for cannot be found.</p>
+				<p>Error code: 404</p>
+			</div>
 			<a id='page-not-found-home-link' href='/'>Go Home</a>
 		</div>
 	</body>
