--- a/views/resetPassword.html
+++ b/views/resetPassword.html
@@ -6,14 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<header>
+		<header id='reset-password-header'>
+			<a id='reset-password-home-link' href='/'>Home</a>
+		</header>
+		<main id='reset-password-main'>
+			<div id='reset-password-message-container'></div>
 			<form id='reset-password-form'>
 				<input id='reset-password-password' placeholder='New password' type='password' value=''>
-				<input type='submit' value='Submit'>
+				<input type='submit' value='Submit' id='reset-password-page-button'>
 			</form>
-			<a id='reset-password-home-link' href='/'>Go Home</a>
-		</header>
-		<div id='reset-password-message-container'></div>
+		</main>
 	</body>
 	<script src='js/resetPassword.js' type='module'></script>
 </html>
