--- a/views/home.html
+++ b/views/home.html
@@ -11,9 +11,12 @@
 
 <body>
 	<header>
-		<h1 id='website-title'>
+		<!-- <h1 id='website-title'>
 			<i class="far fa-images"></i>
 			Camagru Gallery
+		</h1> -->
+		<h1 id='website-title'>
+			<img src='logo/logo.png' alt='Camagru Gallery'>
 		</h1>
 		<div id='header-buttons-div'></div>
 	</header>
