--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,5 @@
-@font-face {
-  font-family: 'Shefilla';
-  src: url('../fonts/shefilla/Shefilla TTF.ttf') format('opentype');
-}
-
 * {
-  font-family: 'open sans';
+  font-family: Roboto, sans-serif;
   font-size: 14px;
 }
 
@@ -28,20 +23,17 @@ button {
   font-size: 14px;
 }
 
-#website-title,
 #hello {
   margin: 5px;
-  font-family: 'Shefilla';
   font-weight: normal;
-  font-size: 2em;
+  font-size: 1.5em;
 }
 
 body {
   box-sizing: border-box;
   min-width: 800px;
   margin: 0;
-  font-family: open sans;
-  background-color: #fafafa;
+  background-color: #fff7ee;
 }
 
 header {
@@ -67,12 +59,10 @@ header a {
   padding-top: 5px;
   padding-bottom: 5px;
   border: none;
-  border-radius: 20px;
-  font-weight: bold;
   text-decoration: none;
   color: white;
   background-image: linear-gradient(to right, #cd9e51, #8d642c);
-  box-shadow: 0 3px 15px #3b2209;
+  box-shadow: 0 1px 5px #522800;
   transition: top 0.1s;
 }
 
@@ -96,11 +86,9 @@ button {
   padding-top: 5px;
   padding-bottom: 5px;
   border: none;
-  border-radius: 20px;
-  font-weight: bold;
   color: white;
   background-image: linear-gradient(to right, #cd9e51, #8d642c);
-  box-shadow: 0 3px 15px #3b2209;
+  box-shadow: 0 1px 5px #522800;
   transition: top 0.1s;
 }
 
@@ -122,7 +110,7 @@ button:active {
 button:disabled {
   cursor: auto;
   background-image: none;
-  background-color: #dbdbdb;
+  background-color: #e6ca9d;
 }
 
 button:disabled:hover {
@@ -135,20 +123,15 @@ input {
   color: #717171;
   background-color: #ffffff;
   border: 1px solid #dbdbdb;
-  border-radius: 4px;
 }
 
 input[type='submit'] {
   padding-left: 25px;
   padding-right: 25px;
-  padding-top: 5px;
-  padding-bottom: 5px;
   border: none;
-  border-radius: 20px;
-  font-weight: bold;
   color: white;
   background-image: linear-gradient(to right, #cd9e51, #8d642c);
-  box-shadow: 0 3px 15px #3b2209;
+  box-shadow: 0 1px 5px #522800;
   transition: top 0.1s;
 }
 
@@ -162,14 +145,9 @@ input[type='submit']:focus {
   outline: none;
 }
 
-/* input[type='submit']:active {
-  top: 2px;
-} */
-
 .light-submit {
   border: 1px solid #cd9e51;
   border-radius: 20px;
-  font-weight: bold;
   color: #8d642c;
 }
 
@@ -181,12 +159,6 @@ input[type='text']:focus {
 input[type='password']:focus {
   outline: none;
   border: 1px solid #cd9e51;
-}
-
-::placeholder {
-  /* Firefox */
-  color: #717171;
-  opacity: 1;
 }
 
 #overlay {
@@ -208,8 +180,7 @@ input[type='password']:focus {
   z-index: 3;
   padding: 25px;
   background-color: #fafafa;
-  border-radius: 4px;
-  box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
+  box-shadow: 0 4px 30px 4px #8d642c;
   opacity: 1;
 }
 
@@ -255,13 +226,7 @@ input[type='password']:focus {
   right: 0;
   padding: 0.5%;
   background-color: #ffffff;
-  border: 1px solid #e6e6e6;
-  border-radius: 4px;
 }
-
-/* #form-container span {
-  margin: 1px;
-} */
 
 #form-container input {
   margin: 1px;
@@ -269,8 +234,6 @@ input[type='password']:focus {
 
 #form-container input[type='submot'] {
   border: 1px solid #cd9e51;
-  border-radius: 20px;
-  font-weight: bold;
   color: #8d642c;
 }
 
@@ -316,13 +279,11 @@ input[type='password']:focus {
 .photo-container {
   max-width: 614px;
   margin: 1%;
-  border-radius: 4px;
   background-color: #ffffff;
 }
 
 .login {
   margin: 5px;
-  font-weight: 600;
   color: #262626;
 }
 
@@ -382,13 +343,11 @@ input[type='password']:focus {
   padding-right: 7px;
   padding-top: 2px;
   padding-bottom: 2px;
-  border-radius: 100%;
 }
 
 .login-div {
   padding-left: 5px;
   padding-right: 5px;
-  font-weight: 600;
   color: #262626;
 }
 
@@ -398,11 +357,6 @@ input[type='password']:focus {
   box-sizing: border-box;
   padding: 10px;
   border: 1px solid #dbdbdb;
-  border-radius: 4px;
-}
-
-.add-comment-input:disabled {
-  background-color: #dbdbdb;
 }
 
 .cool-input {
@@ -413,7 +367,6 @@ input[type='password']:focus {
   color: #717171;
   background-color: #ffffff;
   border: 1px solid #dbdbdb;
-  border-radius: 4px;
 }
 
 .cool-input:focus {
@@ -458,11 +411,9 @@ input[type='password']:focus {
   padding-top: 5px;
   padding-bottom: 5px;
   border: none;
-  border-radius: 20px;
-  font-weight: bold;
   color: white;
   background-image: linear-gradient(to right, #cd9e51, #8d642c);
-  box-shadow: 0 3px 15px #3b2209;
+  box-shadow: 0 1px 5px #522800;
   transition: top 0.1s;
 }
 
@@ -490,7 +441,6 @@ input[type='password']:focus {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-color: #f9f9fa;
 }
 
 #container {
@@ -595,7 +545,6 @@ input[type='password']:focus {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #f9f9fa;
 }
 
 .user-photo-container {
@@ -661,7 +610,6 @@ img {
 #change-buttons button {
   margin: 30px;
   padding: 30px;
-  border-radius: 100%;
 }
 
 #change-scrolls {
@@ -672,17 +620,15 @@ img {
   height: 100px;
   overflow-x: scroll;
   overflow-y: hidden;
-  border: 1px solid #dbdbdb;
   margin: 10px;
 }
 
 .scroll::-webkit-scrollbar {
   height: 99px;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
 
 .scroll::-webkit-scrollbar-thumb {
-  border-radius: 10px;
   background-image: linear-gradient(to right, #cd9e51, #8d642c);
   left: 50%;
 }
@@ -693,7 +639,7 @@ img {
 }
 
 .selected-change-button {
-  border: 1px solid green;
+  background-image: linear-gradient(to right, #8d642c, #6f4204);
 }
 
 #reset-password-header {
@@ -735,16 +681,6 @@ img {
 }
 
 #page-not-found-home-link {
-  /* padding-left: 25px;
-  padding-right: 25px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  border: 1px solid #dbdbdb;
-  border-radius: 4px;
-  font-weight: bold;
-  text-decoration: none;
-  color: #262626; */
-
   margin-left: 5px;
   margin-right: 5px;
   padding-left: 25px;
@@ -752,12 +688,10 @@ img {
   padding-top: 5px;
   padding-bottom: 5px;
   border: none;
-  border-radius: 20px;
-  font-weight: bold;
   text-decoration: none;
   color: white;
   background-image: linear-gradient(to right, #cd9e51, #8d642c);
-  box-shadow: 0 3px 15px #3b2209;
+  box-shadow: 0 1px 5px #522800;
   transition: top 0.1s;
 }
 
@@ -770,10 +704,9 @@ img {
     font-size: 32px;
   }
 
-  #website-title,
   #hello {
     margin: 5px;
-    font-size: 2em;
+    font-size: 1.5em;
   }
 
   label,
@@ -791,16 +724,7 @@ img {
   #custom-file-upload {
     padding-left: 10px;
     padding-right: 10px;
-    padding-top: 20px;
-    padding-bottom: 20px;
     background-color: transparent;
-  }
-
-  button,
-  header a,
-  input[type='submit'],
-  #custom-file-upload {
-    border-radius: 40px;
   }
 
   header {
