prettified html files

--- a/views/account.html
+++ b/views/account.html
@@ -18,10 +18,16 @@
 		</div>
 	</header>
 	<div id='photo-buttons'>
-		<label for='file-upload' id='custom-file-upload'><i class="fas fa-cloud-upload-alt"></i><br>Upload a file</label>
+		<label for='file-upload' id='custom-file-upload'>
+			<i class="fas fa-cloud-upload-alt"></i>
+			<br>Upload a file</label>
 		<input id='file-upload' accept='.jpg, .jpeg, .png' type='file' />
-		<button id='capture-button' disabled><i class="fas fa-camera"></i><br>Take a picture</button>
-		<button id='clear-button' disabled><i class="fas fa-trash"></i><br>Remove stickers</button>
+		<button id='capture-button' disabled>
+			<i class="fas fa-camera"></i>
+			<br>Take a picture</button>
+		<button id='clear-button' disabled>
+			<i class="fas fa-trash"></i>
+			<br>Remove stickers</button>
 	</div>
 	<div id='content'>
 		<main id='account-main'>
